Sema: Catch invalid stored properties in the StorageImplInfoRequest

Previously we were only checking in declarations in primary files, which
is insufficient since SILGen crashes if presented with an invalid stored
property.

Fixes <rdar://problem/54471229>, <https://bugs.swift.org/browse/SR-11322>.